Arborescence css et Navigation

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,86 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: 'Syncopate';
-    background-color: black;
-    color: white;
-
-    a{
-        text-decoration: none;
-        list-style: none;
-        color : white; 
-        &:hover {
-            background-color: white;
-            color: #000;
-            margin: 2px;
-        }
-    }
-}
-
-.home {
-    
-    .accueil {
-
-        height: 100vh;
-
-        .titles {
-            border: double 2px #ffffff;
-            border-radius: 1%;
-        }
-    }
-
-    i {
-        color: white;
-        margin: 0px 40px 0px 40px;
-    }
-
-    h1 {
-        font-size: 55px;
-        margin: 0;
-        padding: 0;
-    }
-
-    h2 {
-        font-size: 20px;
-        font-style: italic;
-    }
-
-    h3 {
-        font-size: 20px;
-        background-color: #ffffff;
-        border-radius: 10px;
-        padding: 5px;
-        color: black
-    }
-
-    .home-content {
-        h4 {
-            color: #ffffff;
-        }
-    }
-
-    .socials {
-        
-        a,
-        h4,
-        i {
-            display: flex;
-            flex-direction: row;
-            font-size: 10px;
-            margin: 5px;
-        }
-    }
-}
-
-.navigation{
-    height: 100vh;
-
-    .side-left {
-        height: 100vh;
-
-    }
-}
+@import './settings';
+@import './pages/contact';
+@import './pages/home';
+@import './pages/skills';
+@import './pages/projects';
+@import './components/navigation';
