--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -4,8 +4,8 @@
 // variables et mixins
 $font-1: "Syncopate", sans-serif;
 
-$color-1: #000000;
-$color-2: #ffffff;
+$color-1: #222;
+$color-2: #ddd;
 $color-3: rgb(43, 145, 148);
 $color-4: #293241;
 $color-5: #ee6c4d;
@@ -40,17 +40,19 @@ a {
   list-style: none;
   color: $color-2;
   &:hover {
+    color: $color-5;
     background-color: $color-2;
-    color: $color-1;
-    margin: 2px;
-  }
-  a:visited {
-    color: $black;
   }
 }
 .skills-content,
 .projects-content,
-.contact-content {
+.contact-content
+ {
   height: $minHeight;
   @include verticalCenter();
+}
+.Notfound-content{
+  height: $minHeight;
+  @include verticalCenter();
+  flex-direction: column;
 }
