--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -5,11 +5,11 @@
 $font-1: "Syncopate", sans-serif;
 
 $color-1: #222;
-$color-2: #ddd;
+$color-2: rgb(241, 241, 241);
 $color-3: rgb(43, 145, 148);
 $color-4: #293241;
 $color-5: #ee6c4d;
-$white: #ddd;
+$white: rgb(241, 241, 241);
 $black: #333;
 
 $borderRadius: 25px;
