--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Syncopate:wght@700&display=swap");
 
-
+html {
+  scroll-behavior: smooth;
+}
 // variables et mixins
 $font-1: "Syncopate", sans-serif;
 
@@ -45,6 +47,8 @@ a {
   }
 }
 .skills-content,
+.contact-content,
+.about-content,
 .contact-content
  {
   height: $minHeight;
