--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -7,3 +7,48 @@
     display: inline;
     content: "❌" ;
 }
+
+.contact-content{
+    .contact-form{
+        width: 50%;
+    }
+
+    input{
+        width: 100%;
+        height: 30px;
+    }
+
+    textarea{
+        height: 80px;
+        width: 100%;
+    }
+
+    input::placeholder {
+        font-size: 10px;
+     
+       }
+
+       textarea::placeholder {
+        font-size: 10px;
+       
+       }
+
+       button {
+        background-color: #A259FF!important;
+        border: none;
+        font-size: 10px;
+        text-transform: uppercase;
+       }
+   
+       h4 {
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 14px;
+       }
+
+       li{
+        list-style-type: none;
+        text-transform: uppercase;
+        @include verticalCenter();
+       }
+}
