--- a/src/styles/pages/_skills.scss
+++ b/src/styles/pages/_skills.scss
@@ -17,7 +17,7 @@
   position: relative;
   margin: 100px auto 0;
   word-break: break-all;
-  border: 1px solid rgba(0, 0, 0, 0.274);
+  border: 1px solid $white;
 }
 
 .bloc-tabs {
@@ -42,21 +42,22 @@
 }
 
 .active-tabs {
-  background: $black;
+  background: $white;
+  color : $black;
   border-bottom: 1px solid transparent;
 }
 
-.active-tabs::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: -5px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(100% + 2px);
-  height: 5px;
-  background: rgb(255, 255, 255);
-}
+// .active-tabs::before {
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   top: -5px;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   width: calc(100% + 2px);
+//   height: 5px;
+//   background: rgb(255, 255, 255);
+// }
 
 
 
@@ -78,11 +79,9 @@ button {
 }
 
 .content {
-  
-  padding: 20px;
   width: 100%;
   height: 100%;
-  visibility: hidden;
+  display: none;
 }
 
 .content h2 {
@@ -97,21 +96,14 @@ button {
 }
 
 .content p {
-  width: 100%;
-  height: 100%;
   text-align: center;
-  margin-top: 19px;
-  font-size: 15px;  
-  
-  &:nth-child(3){
-    font-size: 2px;
-  }
+  font-size: 11px;  
 }
 
 
 
 .active-content {
- visibility: visible;
+ display: block;
  display: flex;
  flex-wrap: wrap;
 }
@@ -131,10 +123,18 @@ button {
     height: 100px !important;
     background-color: transparent;
     margin: 0.5em;
+    --bs-card-spacer-x : 0;
+    --bs-card-spacer-y : 0; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     i {
         text-align: center;
         margin: 0;
         padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
   }
 
@@ -153,27 +153,35 @@ button {
     
   }
 
-<<<<<<< Updated upstream
 i{
   height: 100px;
   width: 100px;
   border-radius: 50%;
   border: 1px solid;
 }
-=======
   .card-front {
     transform: rotateY(0deg);
     border: 1px solid $white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p{
+      margin-bottom: 0;
+    }
     
   }
 
   .card-back {
     transform: rotateY(180deg);
     position: absolute;
-    border: 1px solid $white;
     top: 0;
+    background-color: $white;
+
+    i{
+      color : $black
+    }
   }
->>>>>>> Stashed changes
 
   .card-flip:hover .card-front {
     transform: rotateY(-180deg);
