--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,4 +3,6 @@
 @import './pages/home';
 @import './pages/skills';
 @import './pages/projects';
+@import './pages/about';
 @import './components/navigation';
+
