--- a/src/styles/pages/_skills.scss
+++ b/src/styles/pages/_skills.scss
@@ -15,9 +15,9 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  margin: 100px auto 0;
+  margin: 20px auto 0;
   word-break: break-all;
-  border: 1px solid $white;
+  
 }
 
 .bloc-tabs {
@@ -106,12 +106,15 @@ button {
  display: block;
  display: flex;
  flex-wrap: wrap;
+ justify-content: center;
+ 
 }
 
 .skills-content {
 
   .side-left {
     height: 100vh;
+    border-right: 1px solid $white;
 
 
   }
@@ -194,4 +197,6 @@ i{
   .bootstrap{
     font-size: 2px;
   }
+
+  
 }
