--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -6,7 +6,7 @@
     img{
         height: 100vh;
         width: 100%;
-        object-fit: cover;
+        object-fit: contain;
     }
  
     title {
