--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -16,11 +16,13 @@
     input{
         width: 100%;
         height: 30px;
+        text-transform: uppercase;
     }
 
     textarea{
         height: 80px;
         width: 100%;
+        text-transform: uppercase;
     }
 
     input::placeholder {
@@ -50,5 +52,11 @@
         list-style-type: none;
         text-transform: uppercase;
         @include verticalCenter();
+       }
+
+       .logo{
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
        }
 }
