--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -9,6 +9,9 @@
     width: 100%;
     position: relative;
 
+   
+
+    
     h3 {
       position: absolute;
       top: 45%;
@@ -22,7 +25,7 @@
     }
 
     img {
-      height: 25vh;
+      height: 30vh;
       width: 100%;
       object-fit: cover;
       position: relative;
@@ -54,11 +57,7 @@
 
   }
 
-  .header-project {
-    h1 {
-      font-size: 30px;
-    }
-  }
+  
 
   .showInfos {
     position: absolute;
@@ -136,11 +135,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    position: absolute;
 
     img {
       width: 100%;
       height: 200px;
       object-fit: cover;
+      opacity: 0.6;
       
 
     }
@@ -148,10 +149,14 @@
     .languages-icons {
     display: flex;
      height: 50px;
-     margin-bottom: -2%;
      z-index: 999;
      gap : 0.5rem;
+     margin-bottom: -24px;
 
+     ul{
+      margin: 0;
+      padding: 0;
+     }
     
 
      i {
@@ -169,16 +174,41 @@
 
   .template-description{
     
-    padding: 2em;
-    width: 40%;
+    padding: 20px;
+    margin-top: 50px;
+    position: relative;
+    text-transform: uppercase;
+    
 
     h1{
       font-size: 20px;
+      width: 100%;
 
     }
 
     p{
-      font-size: 10px;
+      font-size: 8px;
+      width: 100%;
+    }
+  }
+
+  .button-space{
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    margin-left: 20px;
+    gap: 10px;
+    
+
+
+    a{
+      background-color: $white;
+      border-radius: 15px;
+      text-transform: uppercase;
+      color: $black;
+      font-size: 9px;
+      padding: 5px;
+
     }
   }
 
