--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -1,6 +1,7 @@
 .projects {
 
   @include verticalCenter;
+  height: $minHeight;
   flex-direction: column;
 
   .project {
@@ -25,7 +26,7 @@
     }
 
     img {
-      height: 30vh;
+      height: 33vh;
       width: 100%;
       object-fit: cover;
       position: relative;
