--- a/src/styles/pages/_skills.scss
+++ b/src/styles/pages/_skills.scss
@@ -9,6 +9,11 @@
 
 .skills {
   height: 100vh;
+
+
+  .gif{
+    width: 20%;
+  }
 }
 
 .container {
@@ -26,25 +31,26 @@
 
 .tabs {
 
-  padding: 15px;
+  
   text-align: center;
-  width: 50%;
-  background: rgba(128, 128, 128, 0.075);
+  width: 100%;
+  height: 100px;
+  background:transparent;
   cursor: pointer;
   border-bottom: 1px solid rgba(0, 0, 0, 0.274);
   box-sizing: content-box;
   position: relative;
   outline: none;
+  font-size: 26px;
 }
 
-.tabs:not(:last-child) {
-  border-right: 1px solid rgba(0, 0, 0, 0.274);
-}
+
 
 .active-tabs {
   background: $white;
   color : $black;
   border-bottom: 1px solid transparent;
+  
 }
 
 // .active-tabs::before {
