--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,6 +1,9 @@
 .c-yup {
     color: red;
     text-align: center;
+    font-size: 6px;
+    margin-top: 5px;
+    text-transform: uppercase;
 }
 
 .c-yup:before{
