--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -24,6 +24,7 @@
         margin: 10%;
         font-size: 10px;
         text-align: justify;
+        text-transform: uppercase;
     }
 
     h4 {
