--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -11,6 +11,41 @@
 
 
 
+
+    }
+
+
+    .marquee-rtl {
+      max-width: 30em;
+      /* largeur de la fenêtre */
+      margin: 1em auto 2em;
+      overflow: hidden;
+      text-transform: uppercase;
+      font-size: 10px;
+    }
+
+    .marquee-rtl> :first-child {
+      display: inline-block;
+      /* modèle de boîte en ligne */
+      padding-right: 2em;
+      /* un peu d'espace pour la transition */
+      padding-left: 100%;
+      /* placement à droite du conteneur */
+      white-space: nowrap;
+      /* pas de passage à la ligne */
+      animation: defilement-rtl 15s infinite linear;
+    }
+
+    @keyframes defilement-rtl {
+      0% {
+        transform: translate3d(0, 0, 0);
+        /* position initiale à droite */
+      }
+
+      100% {
+        transform: translate3d(-100%, 0, 0);
+        /* position finale à gauche */
+      }
     }
 
     @keyframes slidein {
@@ -29,14 +64,14 @@
     }
 
     .gif {
-      width: 20%;
+      width: 3%;
       object-fit: cover;
     }
   }
 
   i {
     color: $color-2;
-    margin: 0px 40px 0px 40px;
+    margin: 0px 10px 0px 40px;
   }
 
   h1 {
@@ -80,6 +115,10 @@
 
   }
 
+  .scroll i {
+    margin: 0;
+  }
+
 
 
   footer {
@@ -90,7 +129,12 @@
     background-color: $black;
 
     i {
-      color : #a166ed;
+      color: #a166ed;
+      font-size: 10px !important;
+    }
+
+    ul {
+      padding-left: 0;
     }
 
 
